syntax = "proto3";

package rabbitmq_confirmation;

message RabbitmqConfirmationProtobuf {
    string user_id = 1;
    string id = 2;
}
